--- a/DefaultRedisSession.Web/DefaultRedisSession.Web.csproj
+++ b/DefaultRedisSession.Web/DefaultRedisSession.Web.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
 
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6"><PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
+<Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
+</PackageReference>
 
         
   </ItemGroup>
