modified log to include performance metrics as log properties

--- a/PerformanceLogging/appsettings.json
+++ b/PerformanceLogging/appsettings.json
@@ -4,5 +4,22 @@
       "Default": "Warning"
     }
   },
+  
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "System": "Information",
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
+  },
+  
   "AllowedHosts": "*"
 }
